Work on adding Custom adhoc task in gradle

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,12 @@
 /build
+*.iml
+.gradle
+.idea
+/local.properties
+.DS_Store
+build
+/captures
+.externalNativeBuild
+**/crashlytics-build.properties
+**/com_crashlytics_export_strings.xml
+fabric.properties
