--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,17 @@
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
 
-apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "java"
 
+
+task execute(type: JavaExec){
+    println 'hello Vrushali!'
+}
+
+
+/*
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -21,6 +29,7 @@ android {
         }
     }
 }
+*/
 
 //custome tack - Adhoc task
 class HelloTask extends DefaultTask{
@@ -36,7 +45,7 @@ task hello(type: HelloTask){
 }
 
 //groovy language
-task hello{
+task hello1{
     doLast{
         println 'hello world !'
     }
@@ -167,12 +176,16 @@ task copyJPESs(type : Copy){
     into 'build'
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
+
+    /*implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    */
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
